FIX: Add MacOS Native Netty resolver